# ArvalBNP

./: .env.example  .gitignore  README.md  REPLICATION_PROMPT.md  SETUP_GUIDE.md  SYSTEM_CONTEXT.md  add_tools.py  configure_vapi_complete.py  deploy_complete.py  deploy_final.py  deploy_v2.py  fix_vapi_voice.py  main.py  publish.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_complete.py  setup_vapi_tools.py  setup_vapi_tools_async.py  verify.py
agent/: __init__.py  tools.py  voice_agent.py
bland_ai/: __init__.py  client.py  webhook.py
customer_portal/: README.md  api.py
data/: .gitkeep
models/: __init__.py  appointment.py  lead.py
tests/: __init__.py  test_agent.py
vapi_ai/: __init__.py  client.py
